--- a/Embedded.html
+++ b/Embedded.html
@@ -25,7 +25,40 @@
 
 <body>
 
-
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">ENNOVA</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="nav-overlay"></div>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2  mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./about.html">About Us</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./ITService.html">OUR SERVICE</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./Nproduct.html">OUR PRODUCT</a>
+                        </li>
+                       
+                        <li class="nav-item">
+                            <a class="nav-link" href="./Contact.html">Contact Us</a>
+                        </li>
+                        
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
 
 
 
@@ -74,7 +107,7 @@
 
                 <div class="col-lg-5 col-md-6">
                     <h2 class=" fw-bold ">Custom Embedded Software Development</h2>
-                    <p>Every embedded system needs embedded software to run properly, and the term “Embedded Software,”
+                    <p>Every embedded system needs embedded software to run properly and the term “Embedded Software,”
                         is
                         used for a set of code instructions meant for non-PC devices- either as a part of a
                         microcontroller
@@ -171,8 +204,8 @@
                 <div class="d-flex flex-column divancal">
                     <a href="./index.html">HOME</a>
                     <a href="./about.html">ABOUT US</a>
-                    <a href="./servicec.html">SERVICES</a>
-                    <a href="./products.html">OUR PRODUCT</a>
+                    <a href="./ITService.html">SERVICES</a>
+                    <a href="./Nproduct.html">OUR PRODUCT</a>
                     <a href="./Contact.html">CONTACT</a>
                 </div>
             </div>
@@ -184,9 +217,9 @@
 
                 <div>
                     <p><i class="far fa-envelope"></i> purchase.ennovatech@gmail.com</p>
-                    <p><i class="far fa-envelope"></i> devlopment.ennovatech@gmail.com</p>
+                    <p><i class="far fa-envelope"></i> development.ennovatech@gmail.com</p>
                 </div>
-                <p><i class="fas fa-map-pin"></i> #Plot No.F45, Kupwad M.I.D.C road, Near TCI Freight.
+                <p><i class="fa-solid fa-location-dot"></i> #Plot No.F45, Kupwad M.I.D.C road, Near TCI Freight.
                     Kupwad, Dist.-Sangli, Maharashtra- 416436.</p>
                 <div id="iconssym">
                     <a href="https://www.facebook.com/profile.php?id=100063876886966"> <i
@@ -200,13 +233,9 @@
 
                 </div>
             </div>
-            <!-- <div class="col-md-1"></div> -->
         </div>
     </section>
-
-
-    <footer class="d-flex justify-content-center bg p-3 ">Copyright @2023 Proudly Crafted by Ennova Technology</footer>
-
+  <footer class="d-flex justify-content-center bg p-3 ">Copyright @2024 Proudly Crafted by Ennova Technology</footer>
 
 
 
