--- a/Nproduct.html
+++ b/Nproduct.html
@@ -19,33 +19,40 @@
 
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top ">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="./index.html">ENNOVA</a>
-
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link " aria-current="page" href="./index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./about.html">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./ITService.html">Our Service</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./Nproduct.html">Our product</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./Contact.html">Contact</a>
-                    </li>
-                </ul>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">ENNOVA</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="nav-overlay"></div>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2  mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./about.html">About Us</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./ITService.html">OUR SERVICE</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./Nproduct.html">OUR PRODUCT</a>
+                        </li>
+                       
+                        <li class="nav-item">
+                            <a class="nav-link" href="./Contact.html">Contact Us</a>
+                        </li>
+                        
+                    </ul>
+                </div>
             </div>
-        </div>
-    </nav>
-
-
+        </nav>
+    </header>
 
 
 
@@ -87,15 +94,15 @@
         <div class="row ">
             <div class=" col-lg-1"></div>
             <div class="col-lg-4 col-md-6 ">
-                <p>Discover our Multichannel AC/DC relay cards at Ennova Technology, providing versatile
+                <p>Discover our Multi channel AC/DC relay cards at Ennova Technology, providing versatile
                     solutions for efficient electrical control. These cards offer multiple channels to meet the
                     diverse needs of your applications. Our Relay Card is a cutting-edge solution designed to enhance
                     control and automation in various applications.Engineered with precision
                     and versatility,this relay card provides seamless integration,optimal
                     performance, and reliability for your electrical </p>
                 <ul>
-                    <li><a href="./firstcv.html">24VDC Relay Card</a></li>
                     <li><a href="./secondcv.html">12VDC Relay Card</a></li>
+                    <li><a href="./firstcv.html">24VDC Relay Card</a></li>
                     <li><a href="./thirdcv.html">230VAC Relay Card</a></li>
                 </ul>
                 <a href="./relay.html"><button type="button" class="btn btn-secondary">More Info..</button></a>
@@ -111,10 +118,10 @@
     <div id="upcommingdiv" class="container-fluid mb-5  mt-5">
         <h2>UPCOMMING PROJECTS</h2>
         <button class="tablink fbtnup" onclick="openPage('Home', this, 'rgb(68 154 220)')" id="defaultOpen">ANALOG IO
-            CARD</button>
+            CARD <span>    </span></button>
         <button class="tablink" onclick="openPage('News', this, 'rgb(68 154 220)')">WiFi ANALOG IO CARD</button>
         <button class="tablink" onclick="openPage('Contact', this, 'rgb(68 154 220)')">WiFi DIGITAL IO CARD</button>
-        <button class="tablink fbtnup" onclick="openPage('Gaurav', this, 'rgb(68 154 220)')">DATA LOGGER</button>
+        <button class="tablink fbtnup" onclick="openPage('Gaurav', this, 'rgb(68 154 220)')">DATA LOGGER <span>      </span></button>
 
         <div id="Home" class="tabcontent">
 
@@ -229,26 +236,26 @@
         </div>
     </div>
 
-    <section id="contactdiv" class="container-fluid  ">
+    <section id="contactdiv" class="container-fluid ">
         <div class="row p-3 ">
             <div class="  col-lg-1"></div>
-
+            <!-- <div class="col-md-1"></div> -->
             <div class="col-md-12 col-lg-4">
                 <h1 class="mb-3  ">ENNOVA TECHNOLOGY</h1>
                 <p>Welcome to ENNOVA TECHNOLOGY, your trusted partner in advanced electrical solutions and IT
                     integration.
-                    Withastead fast commitment to excellence, webring forth a diverse range of cutting-edgeproducts and
+                    With a steadfast commitment to excellence, webring forth a diverse range of cutting-edge products and
                     services designed to empower industries, streamline operations, and enhance efficiency.</p>
             </div>
-
+            <!-- <div class="col-md-1"></div> -->
             <div class="  col-lg-1"></div>
             <div class="col-md-6 col-lg-2">
                 <h3 class="mb-1  fw-bold ">COMPANY</h3>
                 <div class="d-flex flex-column divancal">
                     <a href="./index.html">HOME</a>
                     <a href="./about.html">ABOUT US</a>
-                    <a href="./servicec.html">SERVICES</a>
-                    <a href="./products.html">OUR PRODUCT</a>
+                    <a href="./ITService.html">SERVICES</a>
+                    <a href="./Nproduct.html">OUR PRODUCT</a>
                     <a href="./Contact.html">CONTACT</a>
                 </div>
             </div>
@@ -260,9 +267,9 @@
 
                 <div>
                     <p><i class="far fa-envelope"></i> purchase.ennovatech@gmail.com</p>
-                    <p><i class="far fa-envelope"></i> devlopment.ennovatech@gmail.com</p>
+                    <p><i class="far fa-envelope"></i> development.ennovatech@gmail.com</p>
                 </div>
-                <p><i class="fas fa-map-pin"></i> #Plot No.F45, Kupwad M.I.D.C road, Near TCI Freight.
+                <p><i class="fa-solid fa-location-dot"></i> #Plot No.F45, Kupwad M.I.D.C road, Near TCI Freight.
                     Kupwad, Dist.-Sangli, Maharashtra- 416436.</p>
                 <div id="iconssym">
                     <a href="https://www.facebook.com/profile.php?id=100063876886966"> <i
@@ -276,9 +283,9 @@
 
                 </div>
             </div>
-
         </div>
     </section>
+  <footer class="d-flex justify-content-center bg p-3 ">Copyright @2024 Proudly Crafted by Ennova Technology</footer>
 
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
