--- a/Electrical.html
+++ b/Electrical.html
@@ -19,6 +19,43 @@
 </head>
 
 <body>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">ENNOVA</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="nav-overlay"></div>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2  mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./about.html">About Us</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./ITService.html">OUR SERVICE</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./Nproduct.html">OUR PRODUCT</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link" href="./Contact.html">Contact Us</a>
+                        </li>
+
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+
+
+
 
     <div id="Panel_de">
         <section id="itimghideandview" class=" ">
@@ -104,7 +141,8 @@
     <div id="Panel_Specifi">
         <section id="itimghideandview" class="container-fluid   bg-light ">
             <div class="row ">
-                <div class="col-lg-6  col-md-6">
+                <div class="col-lg-1 "></div>
+                <div class="col-lg-5  col-md-6">
                     <h2 class=" fw-bold ">preparation of panel specification &BOM</h2>
                     <div class="d-flex justify-content-center secitsolutionimgdiv ">
                         <img class="img-fluid " src="./Diagram/BOM (1).png" alt="">
@@ -124,13 +162,14 @@
                     <button type="button" class="btn btn-secondary mb-3">Get A Quote</button>
 
                 </div>
-                <div class="col-lg-6  col-md-6">
+                <div class="col-lg-5  col-md-6">
                     <img class="img-fluid webimgit" src="./Diagram/BOM (1).png" alt="">
                 </div>
+                <div class="col-lg-1 "></div>
             </div>
         </section>
     </div>
- 
+
 
 
     <div id="Earthing">
@@ -141,7 +180,7 @@
                     <img class="img-fluid webimgit" src="./Diagram/EARTHING.jpeg" alt="">
                 </div>
                 <div class="col-lg-5 col-md-6">
-                    <h2 class=" fw-bold ">Earthing Lighning layout</h2>
+                    <h2 class=" fw-bold ">Earthing Lightning layout</h2>
                     <div class="d-flex justify-content-center secitsolutionimgdiv ">
                         <img class="img-fluid " src="./Diagram/EARTHING.jpeg" alt="">
                     </div>
@@ -170,8 +209,7 @@
                 <div id="itdiviot" class="col-lg-5 col-md-6">
                     <h2 class=" fw-bold ">Cable scheduling engineering:</h2>
                     <div class="d-flex justify-content-center secitsolutionimgdiv ">
-                        <img class="img-fluid "
-                            src="./Diagram/CABLE SCHEDULING2.png" alt="">
+                        <img class="img-fluid " src="./Diagram/CABLE SCHEDULING2.png" alt="">
                     </div>
                     <p>Unlock the potential of your engineering projects with our specialized cable scheduling services.
                         Our
@@ -192,8 +230,7 @@
 
                 </div>
                 <div class="col-lg-6 col-md-6  ">
-                    <img class="img-fluid webimgit"
-                    src="./Diagram/CABLE SCHEDULING2.png" alt="">
+                    <img class="img-fluid webimgit" src="./Diagram/CABLE SCHEDULING2.png" alt="">
                 </div>
                 <!-- <div class="col-lg-1 "></div> -->
 
@@ -206,7 +243,7 @@
     <div id="Design&_M">
         <section id="itimghideandview">
             <div class="container  ">
-                <h2 class=" fw-bold ">Design& Manufacturing </h2>
+                <h2 class=" fw-bold ">Design & Manufacturing of Control Panels</h2>
                 <p class="">Experience next-level efficiency with our personalized panel design and manufacturing
                     solutions. From PCC and MCC to VFD and PLC panels, we craft tailored options to match your exact
                     needs. Our state-of-the-art designs prioritize performance, dependability, and energy optimization,
@@ -327,7 +364,7 @@
 
 
 
- 
+
 
 
     <section id="contactdiv" class="container-fluid ">
@@ -338,7 +375,7 @@
                 <h1 class="mb-3  ">ENNOVA TECHNOLOGY</h1>
                 <p>Welcome to ENNOVA TECHNOLOGY, your trusted partner in advanced electrical solutions and IT
                     integration.
-                    Withastead fast commitment to excellence, webring forth a diverse range of cutting-edgeproducts and
+                    With a steadfast commitment to excellence, webring forth a diverse range of cutting-edge products and
                     services designed to empower industries, streamline operations, and enhance efficiency.</p>
             </div>
             <!-- <div class="col-md-1"></div> -->
@@ -348,8 +385,8 @@
                 <div class="d-flex flex-column divancal">
                     <a href="./index.html">HOME</a>
                     <a href="./about.html">ABOUT US</a>
-                    <a href="./servicec.html">SERVICES</a>
-                    <a href="./products.html">OUR PRODUCT</a>
+                    <a href="./ITService.html">SERVICES</a>
+                    <a href="./Nproduct.html">OUR PRODUCT</a>
                     <a href="./Contact.html">CONTACT</a>
                 </div>
             </div>
@@ -361,9 +398,9 @@
 
                 <div>
                     <p><i class="far fa-envelope"></i> purchase.ennovatech@gmail.com</p>
-                    <p><i class="far fa-envelope"></i> devlopment.ennovatech@gmail.com</p>
+                    <p><i class="far fa-envelope"></i> development.ennovatech@gmail.com</p>
                 </div>
-                <p><i class="fas fa-map-pin"></i> #Plot No.F45, Kupwad M.I.D.C road, Near TCI Freight.
+                <p><i class="fa-solid fa-location-dot"></i> #Plot No.F45, Kupwad M.I.D.C road, Near TCI Freight.
                     Kupwad, Dist.-Sangli, Maharashtra- 416436.</p>
                 <div id="iconssym">
                     <a href="https://www.facebook.com/profile.php?id=100063876886966"> <i
@@ -377,10 +414,9 @@
 
                 </div>
             </div>
-            <!-- <div class="col-md-1"></div> -->
         </div>
     </section>
-    <footer class="d-flex justify-content-center bg p-3 ">Copyright @2023 Proudly Crafted by Ennova Technology</footer>
+  <footer class="d-flex justify-content-center bg p-3 ">Copyright @2024 Proudly Crafted by Ennova Technology</footer>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
