--- a/index.html
+++ b/index.html
@@ -184,6 +184,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
+            
                 <a class="navbar-brand" href="#">ENNOVA</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -237,19 +238,19 @@
             <div class="carousel-item" data-bs-interval="2000">
                 <section id="hero">
 
-                    <img src="./Hero/ioback.jpg" alt="">
+                    <img src="./Hero/ioHERO.jpg" alt="">
                     <div class="carousel-caption">
                         <h1 class="animated fadeInRight"> I/O CARD</h1>
                         <h5 class="animated fadeInRight">Optimize control systems with our Embedded IO Card for seamless
                             integration and peak performance."</h5>
-                        <a href="#"></a><button id="scrolbtn" class="">Learn More</button></a>
+                        <a href="./io.html"> <button id="scrolbtn" class="">Learn More</button></a>
                     </div>
                 </section>
             </div>
             <div class="carousel-item">
                 <section id="hero">
 
-                    <img src="./Hero/Data analysis.jpg" alt="">
+                    <img src="./Hero/projects.jpg" alt="">
                     <div class="carousel-caption">
                         <h1 class="animated fadeInRight">UP coming Projects</h1>
                         <h5 class="animated fadeInRight">Stay Tuned for Excellence: A Preview of Our Next Milestone.
@@ -265,8 +266,8 @@
                     <div class="carousel-caption">
                         <h1 class="animated fadeInRight">IT Solutions</h1>
                         <h5 class="animated fadeInRight">"Building Tomorrow's Excellence - Web Design, Software
-                            Development, and Data Analytics Initiatives"</h5>
-                        <a href="#"> <button id="scrolbtn" class="">Learn More</button></a>
+                            Development and Data Analytics Initiatives"</h5>
+                        <a href="./IT.html"> <button id="scrolbtn" class="">Learn More</button></a>
                     </div>
                 </section>
             </div>
@@ -405,7 +406,7 @@
                     journey is marked by perseverance, strategic expansion, and a strong commitment to customer
                     satisfaction.
                 </p>
-                <h5 class="pb-4">Our Core focus and Value</h5>
+                <h5 class="pb-4">Our Core Focus and Value</h5>
             </div>
             <div class="row pb-4 " id="ourfocusdiv">
                 <div class="col-lg-2"></div>
@@ -417,13 +418,12 @@
                 <!-- <div class="col-md-2"></div> -->
                 <div class="col-md-6 col-lg-4 d-flex flex-column justify-content-evenly text-start ">
                     <p><i class="fas fa-chart-bar"></i> Reliability </p>
-                    <p><i class="fas fa-calculator"></i>Cost effective Solution</p>
+                    <p><i class="fas fa-calculator"></i>Cost Effective Solution</p>
                     <p><i class="fas fa-comments"></i>Excellent Support</p>
                 </div>
                 <div class="col-lg-2"></div>
             </div>
         </div>
-
     </section>
 
 
@@ -454,12 +454,12 @@
     <section id="contactdiv" class="container-fluid ">
         <div class="row p-3 ">
             <div class="  col-lg-1"></div>
-
+            <!-- <div class="col-md-1"></div> -->
             <div class="col-md-12 col-lg-4">
                 <h1 class="mb-3  ">ENNOVA TECHNOLOGY</h1>
                 <p>Welcome to ENNOVA TECHNOLOGY, your trusted partner in advanced electrical solutions and IT
                     integration.
-                    Withastead fast commitment to excellence, webring forth a diverse range of cutting-edgeproducts and
+                    With a steadfast commitment to excellence, webring forth a diverse range of cutting-edge products and
                     services designed to empower industries, streamline operations, and enhance efficiency.</p>
             </div>
             <!-- <div class="col-md-1"></div> -->
@@ -469,8 +469,8 @@
                 <div class="d-flex flex-column divancal">
                     <a href="./index.html">HOME</a>
                     <a href="./about.html">ABOUT US</a>
-                    <a href="./servicec.html">SERVICES</a>
-                    <a href="./products.html">OUR PRODUCT</a>
+                    <a href="./ITService.html">SERVICES</a>
+                    <a href="./Nproduct.html">OUR PRODUCT</a>
                     <a href="./Contact.html">CONTACT</a>
                 </div>
             </div>
@@ -484,7 +484,7 @@
                     <p><i class="far fa-envelope"></i> purchase.ennovatech@gmail.com</p>
                     <p><i class="far fa-envelope"></i> development.ennovatech@gmail.com</p>
                 </div>
-                <p><i class="fas fa-map-pin"></i> #Plot No.F45, Kupwad M.I.D.C road, Near TCI Freight.
+                <p><i class="fa-solid fa-location-dot"></i> #Plot No.F45, Kupwad M.I.D.C road, Near TCI Freight.
                     Kupwad, Dist.-Sangli, Maharashtra- 416436.</p>
                 <div id="iconssym">
                     <a href="https://www.facebook.com/profile.php?id=100063876886966"> <i
@@ -498,12 +498,10 @@
 
                 </div>
             </div>
-            <!-- <div class="col-md-1"></div> -->
         </div>
     </section>
+  <footer class="d-flex justify-content-center bg p-3 ">Copyright @2024 Proudly Crafted by Ennova Technology</footer>
 
-
-    <footer class="d-flex justify-content-center bg p-3 ">Copyright @2023 Proudly Crafted by Ennova Technology</footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
