--- a/IT.html
+++ b/IT.html
@@ -42,7 +42,7 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
-                            What we do
+                            What We Do
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item fw-bold " href="./ITService.html">OUR SERVICE</a></li>
@@ -361,7 +361,7 @@
                                 </div>
                                 <h3 class="fs-4 mt-3 fw-bold">IOT Cloud Connectivity</h3>
 
-                                <p>We specializein customer-centric software development,
+                                <p>We specialize in customer-centric software development,
                                     creating solutions tailored to your unique requirements. Elevate your business with
                                     our
                                     bespoke software services.</p>
