--- a/ITService.html
+++ b/ITService.html
@@ -47,7 +47,7 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
-                            What we do
+                            What We Do
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item fw-bold " href="./ITService.html">OUR SERVICE</a></li>
@@ -180,7 +180,7 @@
                             <li><i class="fa-solid fa-caret-right"></i><a href="./Electrical.html#Panel_Specifi">Panel Specification BOM</a></li>
                             <li><i class="fa-solid fa-caret-right"></i><a href="./Electrical.html#Earthing">Earthing, Lighting layout</a></li>
                             <li><i class="fa-solid fa-caret-right"></i><a href="./Electrical.html#Cable">Cable Shedulding Engineering</a></li>
-                            <li><i class="fa-solid fa-caret-right"></i><a href="./Electrical.html#Design&_M">Design & Manufacturing of Pnels (PCC, MCC, VFD)</a></li>
+                            <li><i class="fa-solid fa-caret-right"></i><a href="./Electrical.html#Design&_M">Design & Manufacturing of Panels (PCC, MCC, VFD)</a></li>
                             <li><i class="fa-solid fa-caret-right"></i><a href="./Electrical.html#Design_PLC">Design PLC Panels</a></li>
                         </ul>
                         <a href="./Electrical.html"><button type="button" class="btn btn-secondary">MORE INFO</button></a>
