--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
-                            What we do
+                            What We Do
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item fw-bold " href="./ITService.html">OUR SERVICE</a></li>
@@ -106,7 +106,7 @@
             <div class="carousel-item">
                 <section id="hero">
 
-                    <img src="./Hero/meeting.png" alt="">
+                    <img src="./Hero/IT background.jpg" alt="">
                     <div class="carousel-caption">
                         <h1 class="animated fadeInRight">IT Solutions</h1>
                         <h5 class="animated fadeInRight">"Building Tomorrow's Excellence - Web Design, Software
@@ -272,7 +272,7 @@
 
 
 
-    <section id="figureheading" class="container-fluid ">
+    <!-- <section id="figureheading" class="container-fluid ">
         <div class="text-center ">
             <h1 class="headingkey">Key Figures</h1>
             <h6>We are the responsible, flexible and responsive organisation of hard working team members.</h6>
@@ -291,7 +291,49 @@
                 <h1>Clients</h1>
             </div>
         </div>
+    </section> -->
+
+
+
+    <section id="stats" class="stats mb-5 ">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-5 margin-md-60">
+                    <h2 class="left-title">Some of Our Company Real Facts.</h2>
+                    <p class="white">We are the responsible, flexible and responsive organisation of hard working team members.</p>
+                </div>
+                <div class="col-lg-7 mt-lg-0 mt-5">
+                    <div class="d-sm-flex justify-content-lg-around justify-content-between counter-main keynumber">
+                        <div class="counter">
+                            <div class="icon">
+                                <span class="fa fa-folder-open"></span>
+                            </div>
+                            <p class="value">30+</p>
+                            <p class="title white">Projects</p>
+                        </div>
+                        <div class="counter">
+                            <div class="icon">
+                                <span class="fa fa-headphones"></span>
+                            </div>
+                            <p class="value">20+</p>
+                            <p class="title white">Clients</p>
+                        </div>
+                        <div class="counter">
+                            <div class="icon">
+                                <span class="fa fa-trophy"></span>
+                            </div>
+                            <p class="value">1000+</p>
+                            <p class="title white">Visitors</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
+
+
+
+
 
 
 
