--- a/Embedded.html
+++ b/Embedded.html
@@ -50,7 +50,7 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
-                            What we do
+                            What we Do
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item fw-bold " href="./ITService.html">OUR SERVICE</a></li>
@@ -113,7 +113,7 @@
 
                 <div class="col-lg-5 col-md-6">
                     <h2 class=" fw-bold ">Custom Embedded Software Development</h2>
-                    <p>We create custom circuit board designs that work just right for you, making sure they're dependable and efficient. With our experienced team and advanced tools, we deliver quality designs quickly and affordably. Let us help you turn your ideas into reality with skill and care. Plus, we ensure that every design meets industry standards for optimal performance.</p>
+                    <p>Every device needs special software to work right. We make that software - called embedded software - specifically for gadgets like microcontrollers and IoT devices. At Ennova Technology, we're experts at creating this kind of software, making sure your IoT systems run smoothly.</p>
                     <button type="button" class="btn btn-secondary">Get A Quote</button>
                 </div>
                 <div class="col-lg-1"></div>
@@ -170,12 +170,7 @@
 
                 <div class="col-lg-5 col-md-6">
                     <h2 class=" fw-bold ">Printed Circuit Board Design & Layout Services</h2>
-                    <p>Our team designs printed circuit boards (PCBs) of any complexity, be it multilayer,
-                        high-speed PCBs, or any other type. Our skilled team can create boards from the start or improve
-                        the
-                        already existing electric circuit design.
-                        At Ennova, we help you create an IoT prototype, embedded software, PCB design, and layout
-                        documentation.</p>
+                    <p>We create custom circuit board designs that work just right for you, making sure they're dependable and efficient. With our experienced team and advanced tools, we deliver quality designs quickly and affordably. Let us help you turn your ideas into reality with skill and care. Plus, we ensure that every design meets industry standards for optimal performance.</p>
                     <button type="button" class="btn btn-secondary">Get A Quote</button>
                 </div>
                 <div class="col-lg-1"></div>
