--- a/Nproduct.html
+++ b/Nproduct.html
@@ -44,7 +44,7 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
-                            What we do
+                            What We Do
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item fw-bold " href="./ITService.html">OUR SERVICE</a></li>
@@ -122,7 +122,7 @@
     </section>
 
     <div id="upcommingdiv" class="container-fluid mb-5  mt-5">
-        <h2>UPCOMMING PROJECTS</h2>
+        <h2>UPCOMING PROJECTS</h2>
         <button class="tablink fbtnup" onclick="openPage('Home', this, 'rgb(68 154 220)')" id="defaultOpen">ANALOG IO
             CARD <span> </span></button>
         <button class="tablink" onclick="openPage('News', this, 'rgb(68 154 220)')">WiFi ANALOG IO CARD</button>
