--- a/firstcv.html
+++ b/firstcv.html
@@ -46,7 +46,7 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
-                            What we do
+                            What We Do
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item fw-bold " href="./ITService.html">OUR SERVICE</a></li>
@@ -81,8 +81,7 @@
                                     aria-label="Slide 3"></button>
                                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"
                                     aria-label="Slide 4"></button>
-                                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4"
-                                    aria-label="Slide 5"></button>
+                                 
 
 
                             </div>
@@ -96,11 +95,7 @@
                                 <div class="carousel-item">
                                     <img src="./IORELAY/5.png" class="d-block w-100" alt="...">
                                 </div>
-                                <div class="carousel-item ">
-                                    <img src="./IORELAY/6.png" class="d-block w-100" alt="...">
-                                </div>
-
-                                <div class="carousel-item">
+                                  <div class="carousel-item">
                                     <img src="./IORELAY/7.png" class="d-block w-100" alt="...">
                                 </div>
 
